# seedstudio-ee03-esp-idf

./: CMakeLists.txt
main/: CMakeLists.txt  button.c  button.h  epaper_protocol.h  it8951.c  it8951.h  main.c  main1.c  mdns_discover.c  mdns_discover.h  sht40.c  sht40.h  tcp_client.c  tcp_client.h  wifi.c  wifi.h
